--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,13 @@
 services:
-  app:
-    image: hackaton-campus-sostenible:latest
-    container_name: app_sostenible
-    restart: unless-stopped
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/hackathon
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: hackathon
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-    depends_on:
-      - db
-
   db:
     image: mysql:8.0
     container_name: mysql_hackathon
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: hackathon
+      MYSQL_ROOT_PASSWORD: antimadrugones
       MYSQL_DATABASE: hackathon
-      MYSQL_USER: root
-      MYSQL_PASSWORD: hackathon
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
 
